[gd_scene load_steps=9 format=2]

[ext_resource path="res://Timer.gd" type="Script" id=1]
[ext_resource path="res://assets/timer_100.png" type="Texture" id=2]
[ext_resource path="res://assets/timer_CCW_50.png" type="Texture" id=3]
[ext_resource path="res://assets/timer_0.png" type="Texture" id=4]
[ext_resource path="res://assets/timer_CCW_75.png" type="Texture" id=5]
[ext_resource path="res://assets/timer_CCW_25.png" type="Texture" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 5 ), ExtResource( 3 ), ExtResource( 6 ), ExtResource( 4 ) ],
"loop": false,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 49.0102

[node name="Timer" type="Node2D"]
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="Clock" type="AnimatedSprite" parent="Area2D"]
scale = Vector2( 0.75, 0.75 )
frames = SubResource( 1 )

[node name="Outline" type="Sprite" parent="Area2D"]
self_modulate = Color( 0.94902, 0.94902, 0.94902, 1 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="Countdown" type="Timer" parent="."]
wait_time = 4.0

[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
[connection signal="timeout" from="Countdown" to="." method="_on_Countdown_timeout"]
